tests/errors/missing_open_brace_for_builtin_call.odl
main :: () -> void {
    sizeof 10;
};